--- a/udf/pom.xml
+++ b/udf/pom.xml
@@ -28,6 +28,12 @@
             <scope>compile</scope>
 
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+
 
     </dependencies>
     <modules>
