--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <module>label</module>
         <!--合并脚本-->
         <module>combine-sql</module>
+        <!--自动化生成辅助表-->
+        <module>am</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -53,14 +55,22 @@
             <artifactId>log4j-core</artifactId>
             <version>2.8.2</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <!--<scope>test</scope>-->
+        </dependency>
+
+
+        <!--<dependency>
             <groupId>jdk.tools</groupId>
             <artifactId>jdk.tools</artifactId>
             <version>1.6</version>
             <scope>system</scope>
             <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
 </project>
