--- a/create-table/pom.xml
+++ b/create-table/pom.xml
@@ -30,6 +30,13 @@
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.7</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.shared</groupId>
+                        <artifactId>maven-filtering</artifactId>
+                        <version>1.3</version>
+                    </dependency>
+                </dependencies>
                 <executions>
                     <execution>
                         <id>copy-resources</id>
@@ -48,6 +55,7 @@
                         </configuration>
                     </execution>
                 </executions>
+
             </plugin>
             <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
