--- a/pom.xml
+++ b/pom.xml
@@ -64,13 +64,13 @@
         </dependency>
 
 
-        <!--<dependency>
+        <dependency>
             <groupId>jdk.tools</groupId>
             <artifactId>jdk.tools</artifactId>
             <version>1.6</version>
             <scope>system</scope>
             <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
-        </dependency>-->
+        </dependency>
     </dependencies>
 
 </project>
